--- a/2function/package.json
+++ b/2function/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "dev": "tsx watch src/exercises/two.ts",
+    "dev": "tsx watch src/exercises/one.ts",
     "format": "prettier --write .",
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
